@@ -28,6 +28,11 @@
 - Fixed inconsistent backlog default value (-1) in FPM on many systems. (fat)
 - Fixed bug in the Windows implementation of dns_get_record, where the two
   last parameters wouldn't be filled unless the type were DNS_ANY (Gustavo).
+- Fixed forward stream seeking emulation in streams that don't support seeking
+  in situations where the read operation gives back less data than requested
+  and when there was data in the buffer before the emulation started. Also made
+  more consistent its behavior -- should return failure every time less data
+  than was requested was skipped. (Gustavo)
 
 - Fixed bug #53021 (In html_entity_decode, failure to convert numeric entities
   with ENT_NOQUOTES and ISO-8859-1). Fixed and extended the fix of ENT_NOQUOTES 
